# mandelbrot-optimization

./: README.md  mandelbrot optimization.ipynb  pyproject.toml
.ipynb_checkpoints/: mandelbrot optimization-checkpoint.ipynb
